--- a/grubhub/app/package.json
+++ b/grubhub/app/package.json
@@ -10,6 +10,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-bootstrap-table-next": "^3.2.0",
+    "react-bootstrap-table2-editor": "^1.4.0",
     "react-cookie": "^4.0.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
