--- a/grubhub/app/package.json
+++ b/grubhub/app/package.json
@@ -6,11 +6,14 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "history": "^4.10.1",
+    "js-cookie": "^2.2.1",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-bootstrap-table-next": "^3.2.0",
     "react-bootstrap-table2-editor": "^1.4.0",
+    "react-bootstrap-table2-filter": "^1.2.0",
     "react-cookie": "^4.0.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
