--- a/grubhub/app/package.json
+++ b/grubhub/app/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-test-renderer": "^16.10.2",
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
     "redux-storage": "^4.1.2",
@@ -36,7 +37,9 @@
     "extends": "react-app"
   },
   "jest": {
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "browserslist": {
     "production": [
