--- a/grubhub/api/package.json
+++ b/grubhub/api/package.json
@@ -23,6 +23,8 @@
     "express-session": "^1.16.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mongoose": "^5.7.5",
+    "mongoose-lean-virtuals": "^0.5.0",
     "multer": "^1.4.2",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
