--- a/grubhub/app/package.json
+++ b/grubhub/app/package.json
@@ -10,10 +10,12 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-beautiful-dnd": "^11.0.5",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-bootstrap-table-next": "^3.2.0",
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-filter": "^1.2.0",
+    "react-bootstrap-table2-paginator": "^2.1.0",
     "react-cookie": "^4.0.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
@@ -22,6 +24,7 @@
     "react-scripts": "3.1.1",
     "react-test-renderer": "^16.10.2",
     "react-toastify": "^5.4.0",
+    "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4",
     "redux-storage": "^4.1.2",
     "redux-storage-engine-localstorage": "^1.1.4",
