--- a/grubhub/app/package.json
+++ b/grubhub/app/package.json
@@ -19,6 +19,7 @@
     "react-cookie": "^4.0.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
+    "react-js-pagination": "^3.0.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
